add baseTest ver 2